nix/homelab/kustomize/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-frontend
  namespace: longhorn-system

spec:
  rules:
    - host: longhorn.local
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
